# online-voting

./: docker-compose.yml  package-lock.json
backend/: Cargo.toml
backend/src/: endpoints.rs  main.rs  model.rs
backend/src/endpoints/: auth.rs  polling.rs  registration.rs  vote.rs  votes.rs
backend/src/model/: option.rs  polling.rs  session.rs  user.rs  vote.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
frontend/public/: tailwind.css
frontend/src/: App.vue  main.ts  tailwind.css
frontend/src/components/: Polling.vue  Vote.vue
frontend/src/components/global/: Header.vue  UButton.vue  UInput.vue  index.ts
frontend/src/services/: api.ts
frontend/src/views/: CreatePolling.vue  CreateVote.vue  Home.vue  Login.vue  PollingPage.vue  Registration.vue  VotePage.vue
