[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["full"] }
